feat: adding experience component

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,4 +1,6 @@
 .header {
+  position: sticky;
+  top: var(--top-bottom-space);
   display: flex;
   justify-content: space-between;
   align-items: center;
