--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
   --grid-size: 50px;
   --max-width: 1100px;
   --box-shadow: 0px 8px 7px 0px rgba(64, 60, 67, 0.24);
+  --top-bottom-space: 20px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
@@ -83,7 +84,7 @@ body {
   height: 100vh;
   width: 100%;
   max-width: 1000px;
-  margin: 20px auto;
+  margin: var(--top-bottom-space) auto;
   background-image: linear-gradient(to right, var(--line) 1px, transparent 1px),
     linear-gradient(to bottom, var(--line) 1px, transparent 1px);
   background-size: var(--grid-size) var(--grid-size);
