--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,15 +1,23 @@
 .header {
-  position: sticky;
-  top: var(--top-bottom-space);
+  height: var(--header-height);
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  padding: 0.8rem 0;
+  /* background-color: #fff; */
+  /* box-shadow: 0px 8px 7px 0px rgba(64, 60, 67, 0.24); */
+  backdrop-filter: blur(10px);
+  border: 1px solid transparent;
+}
+
+.content {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 12px 16px;
-  background-color: #fff;
-  border-radius: 32px;
-  /* box-shadow: 0px 8px 0px 2px rgba(64, 60, 67, 0.24); */
-  box-shadow: 0px 8px 7px 0px rgba(64, 60, 67, 0.24);
-  border: 1px solid transparent;
+  width: 100%;
+  max-width: var(--max-width);
+  margin: 0 auto;
 }
 
 .title {
