--- a/src/css/common.css
+++ b/src/css/common.css
@@ -1,16 +1,33 @@
+.flex {
+  display: flex;
+}
+
+.flex-row {
+  flex-direction: row;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
 .box-shadow {
   box-shadow: 0px 8px 7px 0px rgba(64, 60, 67, 0.24);
 }
 
+.button {
+  border-radius: 8px;
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  font-weight: 570;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  text-align: center;
+}
+
 .primary-button {
   background: var(--color-primary);
-  border: none;
-  border-radius: 5px;
   color: white;
-  cursor: pointer;
-  font-size: 1.2rem;
-  padding: 0.5rem 1rem;
-  text-align: center;
 }
 
 .primary-button:hover {
@@ -20,10 +37,5 @@
 .secondary-button {
   background: transparent;
   border: 1px solid var(--color-primary);
-  border-radius: 5px;
-  color: black;
-  cursor: pointer;
-  font-size: 1.2rem;
-  padding: 0.5rem 1rem;
-  text-align: center;
+  color: var(--color-text-primary);
 }
