--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -9,8 +9,9 @@
 
 .intro-section {
   display: flex;
+  gap: 1.5rem;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
 }
 
 .info {
