--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -6,14 +6,15 @@
   width: 350px;
   border-radius: 12px;
   border: 1px sp;
-  background-color: var(--color-white);
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  background-color: var(--color-card-background);
+  box-shadow: var(--card-box-shadow);
 }
 
 .image-container {
   height: 200px;
   width: 100%;
-  border-radius: inherit;
+  border-top-left-radius: inherit;
+  border-top-right-radius: inherit;
 }
 
 .image-container img {
