--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -2,9 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: 3rem;
-  padding: 4rem 0;
   max-width: var(--max-width);
-  margin: 0 auto;
+  margin: var(--header-height) auto;
 }
 
 .intro-section {
@@ -12,6 +11,37 @@
   gap: 1.5rem;
   flex-direction: column;
   align-items: center;
+  position: relative;
+  padding: 5rem 0;
+}
+
+.light-container {
+  overflow: hidden;
+  z-index: -10;
+  position: absolute;
+  inset: 0;
+}
+
+.bg-light {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  left: 50%;
+  top: 0;
+  aspect-ratio: 1/1;
+  width: 33.33%;
+  transform: matrix(1, 0, 0, 1, -240, -240);
+}
+
+.light-element {
+  position: absolute;
+  inset: 0;
+  background-color: rgb(168 85 247/1);
+  opacity: 0.5;
+  border-radius: 9999px;
+  transform: translateZ(0);
+  filter: blur(120px);
 }
 
 .info {
