--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -6,12 +6,11 @@
   margin: var(--header-height) auto;
 }
 
-.intro-section {
+.hero-section {
   display: flex;
   gap: 1.5rem;
   flex-direction: column;
   align-items: center;
-  position: relative;
   padding: 5rem 0;
 }
 
@@ -30,15 +29,15 @@
   left: 50%;
   top: 0;
   aspect-ratio: 1/1;
-  width: 33.33%;
-  transform: matrix(1, 0, 0, 1, -240, -240);
+  width: 40%;
+  transform: translate(-50%, -75%);
 }
 
 .light-element {
   position: absolute;
   inset: 0;
   background-color: rgb(168 85 247/1);
-  opacity: 0.5;
+  opacity: 0.7;
   border-radius: 9999px;
   transform: translateZ(0);
   filter: blur(120px);
