--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -1,3 +1,20 @@
+/**colors*/
+.bg-primary {
+  background-color: var(--color-primary);
+}
+
+.border-primary {
+  border-color: var(--color-primary);
+}
+
+.color-primary {
+  color: var(--color-primary);
+}
+
+.text-secondary {
+  color: var(--color-text-secondary);
+}
+
 .flex {
   display: flex;
 }
@@ -16,26 +33,11 @@
 
 .button {
   border-radius: 8px;
-  padding: 0.5rem 1rem;
-  font-size: 1rem;
-  font-weight: 570;
+  padding: 0.4rem 0.8rem;
+  font-weight: 600;
   cursor: pointer;
   border: none;
   outline: none;
   text-align: center;
-}
-
-.primary-button {
-  background: var(--color-primary);
-  color: white;
-}
-
-.primary-button:hover {
-  background: var(--color-primary-dark);
-}
-
-.secondary-button {
-  background: transparent;
-  border: 1px solid var(--color-primary);
-  color: var(--color-text-primary);
+  font-family: inherit;
 }
