--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,9 +9,8 @@
     color(display-p3 0 0 0 / 0.3) 0px 12px 32px -16px;
   --top-bottom-space: 20px;
   --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+  --font-figtree: "Figtree", -apple-system, system-ui, BlinkMacSystemFont,
+    "Segoe UI", sans-serif;
 
   /* Light Colors */
   --grid-line-color: hsl(0 0% 0% / 0.15);
@@ -64,6 +63,7 @@ body {
   background-color: var(--background-color);
   background-size: var(--grid-size) var(--grid-size);
   color: var(--color-text-primary);
+  font-family: var(--font-figtree);
 }
 
 body::before {
