--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -9,6 +9,7 @@
   /* box-shadow: 0px 8px 7px 0px rgba(64, 60, 67, 0.24); */
   backdrop-filter: blur(10px);
   border: 1px solid transparent;
+  z-index: 100;
 }
 
 .content {
