--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -11,7 +11,8 @@
   gap: 1.5rem;
   flex-direction: column;
   align-items: center;
-  padding: 5rem 0;
+  margin-top: 5rem;
+  text-align: center;
 }
 
 .light-container {
@@ -87,8 +88,8 @@
 
 .projects-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: 2rem;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  gap: 1rem;
 }
 
 .experience-section {
