--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -3,28 +3,31 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
-  width: 350px;
-  border-radius: 12px;
+  max-width: 330px;
+  /* width: 350px; */
+  border-radius: 0.5rem;
   background-color: var(--color-card-background);
-  box-shadow: var(--card-box-shadow);
+  /* box-shadow: var(--card-box-shadow); */
+  border: 1px solid var(--color-card-border);
 }
 
 .image-container {
-  height: 200px;
+  height: 10rem;
   width: 100%;
   border-top-left-radius: inherit;
   border-top-right-radius: inherit;
 }
 
 .image-container img {
-  height: 100%;
+  height: 10rem;
   width: 100%;
+  object-position: top;
   object-fit: cover;
   border-radius: inherit;
 }
 
 .content {
-  padding: 1rem;
+  padding: 1rem 0.5rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -43,5 +46,5 @@
 
 .buttons {
   display: flex;
-  gap: 1rem;
+  gap: 0.5rem;
 }
