--- a/src/components/common/Typography/Typography.module.css
+++ b/src/components/common/Typography/Typography.module.css
@@ -9,8 +9,7 @@
 
 .h3 {
   font-weight: 600;
-  font-size: 1.2rem;
-  line-height: 2rem;
+  font-size: 1.5rem;
 }
 
 .h4 {
@@ -27,6 +26,11 @@
 
 .body1 {
   font-weight: 400;
+}
+
+.body2 {
+  line-height: 1rem;
+  font-size: 0.9rem;
 }
 
 .subtitle1 {
