feat: adding career timeline in experience section

--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -6,9 +6,9 @@
   max-width: 330px;
   /* width: 350px; */
   border-radius: 0.5rem;
-  background-color: var(--color-card-background);
+  background-color: var(--card-background);
   /* box-shadow: var(--card-box-shadow); */
-  border: 1px solid var(--color-card-border);
+  border: 1px solid var(--card-border);
 }
 
 .image-container {
