--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -93,7 +93,7 @@
 }
 
 .experience-section {
-  padding: 2rem;
+  padding: 2rem 0;
   position: relative;
   width: 100%;
 }
@@ -112,7 +112,7 @@
   bottom: 0;
   transform: translateX(-50%);
   width: 2px;
-  background-color: var(--color-secondary);
+  background-color: var(--secondary-color);
 }
 
 .item-container {
@@ -139,6 +139,6 @@
   height: 30px;
   width: 30px;
   border-radius: 50%;
-  border: 3px solid var(--color-secondary);
+  border: 3px solid var(--secondary-color);
   background-color: inherit;
 }
