--- a/src/components/common/Button/Button.module.css
+++ b/src/components/common/Button/Button.module.css
@@ -1,20 +1,21 @@
 .contained {
-  background-color: var(--color);
-  color: var(--color-white);
+  background-color: var(--bg-color);
+  color: var(--color);
 }
 
 .outlined {
   background-color: transparent;
-  border: 1px solid var(--color);
-  color: var(--color-text-primary);
+  border: 1px solid var(--bg-color);
+  color: var(--bg-color);
 }
 
 .primary {
-  --color: var(--color-primary);
+  --bg-color: var(--primary-color);
+  --color: var(--button-primary-text);
 }
 
 .secondary {
-  --color: var(--color-secondary);
+  --color: var(--secondary-color);
 }
 
 .small {
