--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -1,18 +1,22 @@
 /**colors*/
 .bg-primary {
-  background-color: var(--color-primary);
+  background-color: var(--primary-color);
 }
 
 .border-primary {
-  border-color: var(--color-primary);
+  border-color: var(--primary-color);
 }
 
 .color-primary {
-  color: var(--color-primary);
+  color: var(--primary-color);
+}
+
+.text-primary {
+  color: var(--text-primary);
 }
 
 .text-secondary {
-  color: var(--color-text-secondary);
+  color: var(--text-secondary);
 }
 
 .flex {
