--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   top: 0;
-  padding: 0.8rem 0;
+  padding: 0.8rem var(--horizontal-padding);
   /* background-color: #fff; */
   /* box-shadow: 0px 8px 7px 0px rgba(64, 60, 67, 0.24); */
   backdrop-filter: blur(10px);
@@ -28,15 +28,15 @@
 
 .navbar {
   display: flex;
-  gap: 20px;
+  gap: 1.25rem;
 }
 
 .links-container {
   display: flex;
-  gap: 8px;
+  gap: 0.5rem;
 }
 
 .buttons-group {
   display: flex;
-  gap: 8px;
+  gap: 0.5rem;
 }
