--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -31,6 +31,14 @@
   flex-direction: column;
 }
 
+.align-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
 .box-shadow {
   box-shadow: 0px 8px 7px 0px rgba(64, 60, 67, 0.24);
 }
