--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,10 @@
   margin: 0;
 }
 
+html {
+  font-size: 16px;
+}
+
 body {
   height: 100vh;
   width: 100%;
@@ -65,4 +69,16 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+@media (max-width: 768px) {
+  html {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 480px) {
+  html {
+    font-size: 10px;
+  }
 }
