--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,5 +1,6 @@
 :root {
-  --header-height: 50px;
+  --header-height: 3rem;
+  --horizontal-padding: 1rem;
   --grid-size: 50px;
   --max-width: 50rem;
   --box-shadow: 0px 8px 7px 0px rgba(64, 60, 67, 0.24);
