feat: adding data

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -51,10 +51,6 @@
   gap: 1.5rem;
 }
 
-.info h1 {
-  font-size: 2.5rem;
-}
-
 .info p {
   font-size: 1.2rem;
 }
@@ -62,7 +58,6 @@
 .action-buttons {
   display: flex;
   gap: 2rem;
-  margin-bottom: 2.5rem;
 }
 
 .hero-right-part {
@@ -83,7 +78,7 @@
 }
 
 .projects-section h2 {
-  font-size: 2rem;
+  text-align: center;
   margin-bottom: 2rem;
 }
 
@@ -94,7 +89,6 @@
 }
 
 .experience-section {
-  padding: 2rem 0;
   position: relative;
   width: 100%;
 }
