--- a/src/components/common/Button/Button.module.css
+++ b/src/components/common/Button/Button.module.css
@@ -5,7 +5,7 @@
 
 .outlined {
   background-color: transparent;
-  border: 1px solid var(--bg-color);
+  outline: 1px solid var(--bg-color);
   color: var(--bg-color);
 }
 
