--- a/src/components/common/Typography/Typography.module.css
+++ b/src/components/common/Typography/Typography.module.css
@@ -4,6 +4,7 @@
 }
 
 .h2 {
+  font-size: 2rem;
   font-weight: 700;
 }
 
@@ -26,10 +27,11 @@
 
 .body1 {
   font-weight: 400;
+  line-height: 1.6;
 }
 
 .body2 {
-  line-height: 1rem;
+  line-height: 1.6;
   font-size: 0.9rem;
 }
 
