--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -39,6 +39,10 @@
   justify-content: center;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .box-shadow {
   box-shadow: 0px 8px 7px 0px rgba(64, 60, 67, 0.24);
 }
