--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -1,19 +1,7 @@
 :root {
   /* Light Colors */
   --grid-line-color: hsl(0 0% 0% / 0.15);
-  --background-color: #ffffff;
-  --paper-color: #ebd3f8;
-
   --color-white: #ffffff;
-
-  --primary-color: #7a1cac;
-  --secondary-color: #ad49e1;
-
-  --color-text-primary: #1b1c1c;
-  --color-text-secondary: #6c757d;
-
-  --text-primary: #2e073f;
-  --text-secondary: #7a1cac;
 
   --primary-color: #1a1a1d; /* Dark gray */
   --secondary-color: #4e4e50; /* Medium gray */
@@ -21,7 +9,7 @@
   --paper-color: #f5f5f5; /* Light gray */
   --card-background: #f7f7f7; /* Slightly darker light gray */
   --card-border: #e0e0e0; /* Light border */
-  --text-primary: #1a1a1d; /* Same as primary color */
+  --text-primary: #1f2937; /* Same as primary color */
   --text-secondary: #4e4e50; /* Slightly lighter version of primary */
   --button-primary-bg: #1a1a1d; /* Primary background for buttons */
   --button-primary-text: #ffffff; /* White text for buttons */
@@ -36,12 +24,16 @@
   --primary-color: #e0e0e0; /* Light gray */
   --secondary-color: #a6a6a8; /* Medium-light gray */
   --background-color: #1a1a1d; /* Dark gray */
-  --paper-color: #2e2e30; /* Slightly lighter dark gray */
+  --paper-color: #111; /* Slightly lighter dark gray */
   --card-background: #2b2b2d; /* Card background for dark mode */
-  --card-border: #4e4e50; /* Medium gray border */
-  --text-primary: #ffffff; /* White text */
+  --card-border: #333; /* Medium gray border */
+  --text-primary: #cac7c7; /* White text */
   --text-secondary: #a6a6a8; /* Medium-light gray text */
-  --button-primary-bg: #e0e0e0; /* Light gray background for buttons */
+  --button-primary-bg: rgb(
+    237,
+    237,
+    237
+  ); /* Light gray background for buttons */
   --button-primary-text: #1a1a1d; /* Dark gray text for buttons */
   --button-secondary-bg: #4e4e50; /* Medium gray background for secondary buttons */
   --button-secondary-text: #ffffff; /* White text for secondary buttons */
