--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  max-width: 330px;
+  /* max-width: 330px; */
   /* width: 350px; */
   border-radius: 0.5rem;
   background-color: var(--background-color);
@@ -11,7 +11,7 @@
 }
 
 .image-container {
-  height: 9rem;
+  height: 13rem;
   width: 100%;
   border-top-left-radius: inherit;
   border-top-right-radius: inherit;
@@ -20,13 +20,13 @@
 .image-container img {
   height: 100%;
   width: 100%;
-  object-position: top;
-  object-fit: cover;
+  /* object-position: top;
+  object-fit: cover; */
   border-radius: inherit;
 }
 
 .content {
-  padding: 1rem 0.5rem;
+  padding: 1rem 1rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
